# superpoint_libtorch

./: CMakeLists.txt  README.md  download_weight_torch.sh  main.cpp
ROS/: CMakeLists.txt  manifest.xml  ros_main.cpp
include/: SPextractor.h  SuperPoint.h  TimeClock.h
src/: SPextractor.cc  SuperPoint.cc  TimeClock.cc
